--- a/r10k/Dockerfile
+++ b/r10k/Dockerfile
@@ -8,14 +8,12 @@ ENV PUPPET_AGENT_VERSION="1.8.0" \
     PUPPET_MODULE_R10K_VERSION="4.0.2" \
     PATH=/opt/puppetlabs/server/bin:/opt/puppetlabs/puppet/bin:/opt/puppetlabs/bin:$PATH
 
-LABEL org.label-schema.vendor="Puppet" \
-      org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
+LABEL org.label-schema.vendor="VSHN AG" \
+      org.label-schema.url="https://github.com/vshn/puppet-in-docker" \
       org.label-schema.name="Puppet r10k" \
-      org.label-schema.license="Apache-2.0" \
+      org.label-schema.license="BSD-3-Clause" \
       org.label-schema.version=$PUPPET_SERVER_VERSION \
-      org.label-schema.vcs-url="https://github.com/puppetlabs/puppet-in-docker" \
-      org.label-schema.vcs-ref="791b5505348e901a21b2ca2700068e2743019848" \
-      org.label-schema.build-date="2016-09-14T13:37:00Z" \
+      org.label-schema.vcs-url="https://github.com/vshn/puppet-in-docker" \
       org.label-schema.schema-version="1.0" \
       com.puppet.dockerfile="/Dockerfile"
 
