--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -2,13 +2,12 @@ FROM postgres:9.5.3
 MAINTAINER Gareth Rushgrove "gareth@puppet.com"
 
 LABEL org.label-schema.vendor="Puppet" \
-      org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
+      org.label-schema.url="https://github.com/vshn/puppet-in-docker" \
       org.label-schema.name="PostgreSQL instance for PuppetDB" \
       org.label-schema.license="Apache-2.0" \
       org.label-schema.version="0.1.0" \
-      org.label-schema.vcs-url="https://github.com/puppetlabs/puppet-in-docker" \
-      org.label-schema.vcs-ref="791b5505348e901a21b2ca2700068e2743019848" \
-      org.label-schema.build-date="2016-09-14T13:37:00Z" \
+      org.label-schema.vcs-url="https://github.com/vshn/puppet-in-docker" \
+      org.label-schema.vcs-ref="master" \
       org.label-schema.schema-version="1.0" \
       com.puppet.dockerfile="/Dockerfile"
 
