--- a/puppetserver/Dockerfile.legacy
+++ b/puppetserver/Dockerfile.legacy
@@ -4,7 +4,7 @@ ENV PUPPET_SERVER_VERSION="2.7.2" \
     DUMB_INIT_VERSION="1.2.0" \
     UBUNTU_CODENAME="xenial" \
     PUPPETSERVER_JAVA_ARGS="-Xms256m -Xmx256m" \
-    PUPPETDB_TERMINI_VERSION="4.3.0" \
+    PUPPETDB_TERMINUS_VERSION="2.3.8" \
     LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8 LANGUAGE=en_US.UTF-8 \
     PATH=/opt/puppetlabs/server/bin:/opt/puppetlabs/puppet/bin:/opt/puppetlabs/bin:$PATH
 
@@ -29,11 +29,13 @@ RUN locale-gen en_US.UTF-8 && apt-get update && \
     apt-get install -y wget git netcat vim && \
     wget https://apt.puppetlabs.com/puppetlabs-release-pc1-"$UBUNTU_CODENAME".deb && \
     wget https://github.com/Yelp/dumb-init/releases/download/v"$DUMB_INIT_VERSION"/dumb-init_"$DUMB_INIT_VERSION"_amd64.deb && \
+    wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb && \
     dpkg -i puppetlabs-release-pc1-"$UBUNTU_CODENAME".deb && \
     dpkg -i dumb-init_"$DUMB_INIT_VERSION"_amd64.deb && \
+    dpkg -i puppetlabs-release-trusty.deb && \
     rm puppetlabs-release-pc1-"$UBUNTU_CODENAME".deb dumb-init_"$DUMB_INIT_VERSION"_amd64.deb && \
     apt-get update && \
-    apt-get install --no-install-recommends -y puppetserver="$PUPPET_SERVER_VERSION"-1puppetlabs1 puppetdb-termini="$PUPPETDB_TERMINI_VERSION"-1puppetlabs1 && \
+    apt-get install --no-install-recommends -y puppetserver="$PUPPET_SERVER_VERSION"-1puppetlabs1 puppetdb-terminus="$PUPPETDB_TERMINUS_VERSION"-1puppetlabs1 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     find \
