--- a/nats/Dockerfile
+++ b/nats/Dockerfile
@@ -7,7 +7,7 @@ LABEL org.label-schema.vendor="VSHN AG" \
       org.label-schema.url="https://github.com/vshn/puppet-in-docker" \
       org.label-schema.name="Puppet Choria NATS Broker" \
       org.label-schema.license="BSD-3-Clause" \
-      org.label-schema.version=$PUPPET_SERVER_VERSION \
+      org.label-schema.version=$NATS_VERSION \
       org.label-schema.vcs-url="https://github.com/vshn/puppet-in-docker" \
       org.label-schema.schema-version="1.0" \
       com.puppet.dockerfile="/Dockerfile"
