--- a/nats/nats.cfg
+++ b/nats/nats.cfg
@@ -5,9 +5,9 @@ debug: false
 trace: false
 
 tls {
-  cert_file: "/etc/nats/ssl/certs/nats.local.pem"
-  key_file: "/etc/nats/ssl/private_keys/nats.local.pem"
-  ca_file: "/etc/nats/ssl/certs/ca.pem"
+  cert_file: "CERTFILE"
+  key_file: "KEYFILE"
+  ca_file: "CAFILE"
   verify: true
   timeout: 2
 }
