--- a/r10k/Dockerfile
+++ b/r10k/Dockerfile
@@ -52,6 +52,7 @@ RUN mkdir /root/.ssh \
 # Add configuration file into the image
 COPY r10k.yaml /etc/puppetlabs/r10k/r10k.yaml
 COPY request-cert.rb /usr/local/bin
+COPY agent/git.ddl agent/git.rb /opt/puppetlabs/mcollective/plugins/mcollective/agent/
 
 # Copy entrypoint into container
 COPY docker-entrypoint.sh /
