--- a/puppetserver/Dockerfile.legacy
+++ b/puppetserver/Dockerfile.legacy
@@ -39,6 +39,7 @@ RUN apt-get update && \
     apt-get install --no-install-recommends -y puppetserver="$PUPPET_SERVER_VERSION"-1puppetlabs1 puppetdb-terminus="$PUPPETDB_TERMINUS_VERSION"-1puppetlabs1 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
+    if [ "$PUPPET_SERVER_VERSION" = "2.7.2" ]; then sed -i '73 a\    virtual = true' /opt/puppetlabs/puppet/lib/ruby/vendor_ruby/puppet/parser/functions/create_resources.rb; else echo "PUP-6698 workaround is for puppet server 2.7.2 only"; fi && \
     find \
       /etc/puppetlabs \
       /opt/puppetlabs/server/data/puppetserver \
