--- a/puppetserver/Dockerfile.legacy
+++ b/puppetserver/Dockerfile.legacy
@@ -1,6 +1,6 @@
 FROM ubuntu:16.04
 
-ENV PUPPET_SERVER_VERSION="2.7.2" \
+ENV PUPPET_SERVER_VERSION="5.0.0" \
     DUMB_INIT_VERSION="1.2.0" \
     UBUNTU_CODENAME="xenial" \
     PUPPETSERVER_JAVA_ARGS="-Xms256m -Xmx256m" \
@@ -28,18 +28,17 @@ COPY Dockerfile.legacy /Dockerfile
 RUN apt-get update && \
     apt-get install -y wget git netcat vim locales && \
     locale-gen en_US.UTF-8 && \
-    wget https://apt.puppetlabs.com/puppetlabs-release-pc1-"$UBUNTU_CODENAME".deb && \
+    wget https://apt.puppetlabs.com/puppet5-release-"$UBUNTU_CODENAME".deb && \
     wget https://github.com/Yelp/dumb-init/releases/download/v"$DUMB_INIT_VERSION"/dumb-init_"$DUMB_INIT_VERSION"_amd64.deb && \
     wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb && \
-    dpkg -i puppetlabs-release-pc1-"$UBUNTU_CODENAME".deb && \
+    dpkg -i puppet5-release-"$UBUNTU_CODENAME".deb && \
     dpkg -i dumb-init_"$DUMB_INIT_VERSION"_amd64.deb && \
     dpkg -i puppetlabs-release-trusty.deb && \
-    rm puppetlabs-release-pc1-"$UBUNTU_CODENAME".deb dumb-init_"$DUMB_INIT_VERSION"_amd64.deb && \
+    rm puppet5-release-"$UBUNTU_CODENAME".deb dumb-init_"$DUMB_INIT_VERSION"_amd64.deb puppetlabs-release-trusty.deb && \
     apt-get update && \
     apt-get install --no-install-recommends -y puppetserver="$PUPPET_SERVER_VERSION"-1puppetlabs1 puppetdb-terminus="$PUPPETDB_TERMINUS_VERSION"-1puppetlabs1 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-    if [ "$PUPPET_SERVER_VERSION" = "2.7.2" ]; then sed -i '73 a\    virtual = true' /opt/puppetlabs/puppet/lib/ruby/vendor_ruby/puppet/parser/functions/create_resources.rb; else echo "PUP-6698 workaround is for puppet server 2.7.2 only"; fi && \
     find \
       /etc/puppetlabs \
       /opt/puppetlabs/server/data/puppetserver \
