Make number of JRuby instaces configurable

--- a/puppetserver/Dockerfile
+++ b/puppetserver/Dockerfile
@@ -4,6 +4,7 @@ ENV PUPPET_SERVER_VERSION="5.0.0" \
     DUMB_INIT_VERSION="1.2.0" \
     UBUNTU_CODENAME="xenial" \
     PUPPETSERVER_JAVA_ARGS="-Xms256m -Xmx256m" \
+    PUPPETSERVER_JRUBYINSTANCES=2 \
     PUPPETDB_TERMINI_VERSION="5.0.1" \
     LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8 LANGUAGE=en_US.UTF-8 \
     PATH=/opt/puppetlabs/server/bin:/opt/puppetlabs/puppet/bin:/opt/puppetlabs/bin:$PATH
