make node-ttl configurable

--- a/puppetdb/conf.d/database.conf
+++ b/puppetdb/conf.d/database.conf
@@ -2,4 +2,5 @@ database: {
   subname: "//postgres:5432/puppetdb"
   username: ${PUPPETDB_USER}
   password: ${PUPPETDB_PASSWORD}
+  node-ttl: ${PUPPETDB_NODETTL}
 }
