--- a/puppetdb/Dockerfile
+++ b/puppetdb/Dockerfile
@@ -6,6 +6,7 @@ ENV PUPPETDB_VERSION="5.1.3" \
     PUPPETDB_USER=puppetdb \
     PUPPETDB_PASSWORD=puppetdb \
     PUPPETDB_JAVA_ARGS="-Djava.net.preferIPv4Stack=true -Xms256m -Xmx256m" \
+    PUPPETDB_NODETTL="30d" \
     PATH=/opt/puppetlabs/server/bin:/opt/puppetlabs/puppet/bin:/opt/puppetlabs/bin:$PATH
 
 LABEL org.label-schema.vendor="VSHN AG" \
@@ -47,4 +48,3 @@ COPY conf.d /etc/puppetlabs/puppetdb/conf.d
 # Copy entrypoint into container
 COPY docker-entrypoint.sh /
 COPY /docker-entrypoint.d/* /docker-entrypoint.d/
-
