Add mco agent for r10k cli

--- a/mcoclient/Dockerfile
+++ b/mcoclient/Dockerfile
@@ -43,6 +43,7 @@ RUN apt-get update && puppet apply --hiera_config=/tmp/hiera.yaml --modulepath=/
 
 # Add configuration file into the image
 COPY agent/git.ddl /opt/puppetlabs/mcollective/plugins/mcollective/agent/
+COPY agent/r10kcli.ddl /opt/puppetlabs/mcollective/plugins/mcollective/agent/
 
 # Copy entrypoint into container
 COPY docker-entrypoint.sh /
