--- a/puppetserver/Dockerfile.puppet4
+++ b/puppetserver/Dockerfile.puppet4
@@ -39,6 +39,7 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     if [ "$PUPPET_SERVER_VERSION" = "2.7.2" ]; then sed -i '73 a\    virtual = true' /opt/puppetlabs/puppet/lib/ruby/vendor_ruby/puppet/parser/functions/create_resources.rb; else echo "PUP-6698 workaround is for puppet server 2.7.2 only"; fi && \
+    /opt/puppetlabs/server/bin/puppetserver gem install gettext-setup && \
     find \
       /etc/puppetlabs \
       /opt/puppetlabs/server/data/puppetserver \
