Manage PuppetDB maximum-pool-size database setting
Now the maximum-pool-size database setting can be managed via
env variables.

Also use the current PuppetDB version 5.1.5.

--- a/puppetdb/conf.d/database.conf
+++ b/puppetdb/conf.d/database.conf
@@ -3,4 +3,5 @@ database: {
   username: ${PUPPETDB_USER}
   password: ${PUPPETDB_PASSWORD}
   node-ttl: ${PUPPETDB_NODETTL}
+  maximum-pool-size: ${PUPPETDB_MAXPOOLSIZE}
 }
