--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
 
 before_script:
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+  - echo $DOCKER_HUB_PASSWORD | docker login -u $DOCKER_HUB_USER --password-stdin
 
 .dockerbuild:
   stage: build
@@ -18,6 +19,7 @@ before_script:
   script:
     - docker build -t $CI_REGISTRY_IMAGE:$TAG-$CI_COMMIT_REF_NAME --build-arg "PUPPET_SERVER_VERSION=$PUPPET_SERVER_VERSION" --build-arg "PUPPETDB_TERMINI_VERSION=$PUPPETDB_TERMINI_VERSION" puppetserver
     - docker push $CI_REGISTRY_IMAGE:$TAG-$CI_COMMIT_REF_NAME
+    - docker push docker.io/vshn/puppet-puppetserver:${TAG}
 
 puppetserver_53:
   extends: .puppetserver
@@ -46,6 +48,7 @@ puppetserver_61:
   script:
     - docker build -t $CI_REGISTRY_IMAGE:$TAG-$CI_COMMIT_REF_NAME --build-arg "PUPPETDB_VERSION=$PUPPETDB_VERSION" puppetdb
     - docker push $CI_REGISTRY_IMAGE:$TAG-$CI_COMMIT_REF_NAME
+    - docker push docker.io/vshn/puppet-puppetdb:${TAG}
 
 puppetdb_52:
   extends: .puppetserver
