gitlab-ci push to docker.io

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ before_script:
   extends: .dockerbuild
   script:
     - docker build -t ${CI_REGISTRY_IMAGE}:${TAG}-${CI_COMMIT_REF_NAME} --build-arg "PUPPET_SERVER_VERSION=${PUPPET_SERVER_VERSION}" --build-arg "PUPPETDB_TERMINI_VERSION=${PUPPETDB_TERMINI_VERSION}" puppetserver
+    - docker build -t docker.io/vshn/puppet-puppetserver:${TAG}-${CI_COMMIT_REF_NAME} --build-arg "PUPPETDB_TERMINI_VERSION=${PUPPETDB_TERMINI_VERSION}" puppetserver
     - docker push ${CI_REGISTRY_IMAGE}:${TAG}-${CI_COMMIT_REF_NAME}
     - docker push docker.io/vshn/puppet-puppetserver:${TAG}-${CI_COMMIT_REF_NAME}
 
@@ -47,23 +48,24 @@ puppetserver_61:
   extends: .dockerbuild
   script:
     - docker build -t ${CI_REGISTRY_IMAGE}:${TAG}-${CI_COMMIT_REF_NAME} --build-arg "PUPPETDB_VERSION=${PUPPETDB_VERSION}" puppetdb
+    - docker build -t docker.io/vshn/puppet-puppetdb:${TAG}-${CI_COMMIT_REF_NAME} --build-arg "PUPPETDB_VERSION=${PUPPETDB_VERSION}" puppetdb
     - docker push ${CI_REGISTRY_IMAGE}:${TAG}-${CI_COMMIT_REF_NAME}
     - docker push docker.io/vshn/puppet-puppetdb:${TAG}-${CI_COMMIT_REF_NAME}
 
 puppetdb_52:
-  extends: .puppetserver
+  extends: .puppetdb
   variables:
     PUPPETDB_VERSION: '5.2.7'
     TAG: '5.2'
 
 puppetdb_60:
-  extends: .puppetserver
+  extends: .puppetdb
   variables:
     PUPPETDB_VERSION: '6.0.2'
     TAG: '6.0'
 
 puppetdb_61:
-  extends: .puppetserver
+  extends: .puppetdb
   variables:
     PUPPETDB_VERSION: '6.1.0'
     TAG: '6.1'
