--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,6 @@ before_script:
   script:
     - docker build -t ${CI_REGISTRY_IMAGE}:${TAG}-${CI_COMMIT_REF_NAME} --build-arg "PUPPET_SERVER_VERSION=${PUPPET_SERVER_VERSION}" --build-arg "PUPPETDB_TERMINI_VERSION=${PUPPETDB_TERMINI_VERSION}" puppetserver
     - docker build -t docker.io/vshn/puppet-puppetserver:${TAG}-${CI_COMMIT_REF_NAME} --build-arg "PUPPETDB_TERMINI_VERSION=${PUPPETDB_TERMINI_VERSION}" puppetserver
-    - docker push ${CI_REGISTRY_IMAGE}/puppet-puppetserver:${TAG}-${CI_COMMIT_REF_NAME}
     - docker push docker.io/vshn/puppet-puppetserver:${TAG}-${CI_COMMIT_REF_NAME}
 
 puppetserver_53:
@@ -29,12 +28,12 @@ puppetserver_53:
     PUPPETDB_TERMINI_VERSION: '5.2.7'
     TAG: '5.3'
 
-puppetserver_60:
-  extends: .puppetserver
-  variables:
-    PUPPET_SERVER_VERSION: '6.0.3'
-    PUPPETDB_TERMINI_VERSION: '6.0.2'
-    TAG: '6.0'
+# puppetserver_60:
+#   extends: .puppetserver
+#   variables:
+#     PUPPET_SERVER_VERSION: '6.0.3'
+#     PUPPETDB_TERMINI_VERSION: '6.0.2'
+#     TAG: '6.0'
 
 puppetserver_61:
   extends: .puppetserver
@@ -49,7 +48,6 @@ puppetserver_61:
   script:
     - docker build -t ${CI_REGISTRY_IMAGE}:${TAG}-${CI_COMMIT_REF_NAME} --build-arg "PUPPETDB_VERSION=${PUPPETDB_VERSION}" puppetdb
     - docker build -t docker.io/vshn/puppet-puppetdb:${TAG}-${CI_COMMIT_REF_NAME} --build-arg "PUPPETDB_VERSION=${PUPPETDB_VERSION}" puppetdb
-    - docker push ${CI_REGISTRY_IMAGE}/puppet-puppetdb:${TAG}-${CI_COMMIT_REF_NAME}
     - docker push docker.io/vshn/puppet-puppetdb:${TAG}-${CI_COMMIT_REF_NAME}
 
 puppetdb_52:
@@ -58,11 +56,11 @@ puppetdb_52:
     PUPPETDB_VERSION: '5.2.7'
     TAG: '5.2'
 
-puppetdb_60:
-  extends: .puppetdb
-  variables:
-    PUPPETDB_VERSION: '6.0.2'
-    TAG: '6.0'
+# puppetdb_60:
+#   extends: .puppetdb
+#   variables:
+#     PUPPETDB_VERSION: '6.0.2'
+#     TAG: '6.0'
 
 puppetdb_61:
   extends: .puppetdb
