--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -1,7 +1,7 @@
 FROM haproxy:1.7-alpine
 
-ENV DUMB_INIT_VERSION="1.2.1" \
-    CONFD_VERSION="0.12.0-alpha3"
+ENV DUMB_INIT_VERSION="1.2.2" \
+    CONFD_VERSION="0.16.0"
 
 LABEL org.label-schema.vendor="VSHN AG" \
       org.label-schema.url="https://github.com/vshn/puppet-in-docker" \
