--- a/r10k/Dockerfile
+++ b/r10k/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:18.04
 
-ENV PUPPET_AGENT_VERSION="5.5.7" \
-    R10K_VERSION="2.6.4" \
+ARG PUPPET_AGENT_VERSION="5.5.7"
+ENV R10K_VERSION="2.6.4" \
     DUMB_INIT_VERSION="1.2.2" \
     UBUNTU_CODENAME="bionic" \
     PUPPET_MODULE_CHORIA_VERSION="0.12.0" \
