--- a/mcoclient/Dockerfile
+++ b/mcoclient/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:18.04
 
-ENV PUPPET_AGENT_VERSION="5.5.7" \
-    DUMB_INIT_VERSION="1.2.2" \
+ARG PUPPET_AGENT_VERSION="5.5.7"
+ENV DUMB_INIT_VERSION="1.2.2" \
     UBUNTU_CODENAME="bionic" \
     PUPPET_MODULE_CHORIA_VERSION="0.12.0" \
     PUPPET_MODULE_R10K_VERSION="6.8.0" \
