fix postgres url variable

--- a/puppetdb/conf.d/database.conf
+++ b/puppetdb/conf.d/database.conf
@@ -1,5 +1,5 @@
 database: {
-  subname: "${PUPPETDB_URL}"
+  subname: ${PUPPETDB_URL}
   username: ${PUPPETDB_USER}
   password: ${PUPPETDB_PASSWORD}
   node-ttl: ${PUPPETDB_NODETTL}
