--- a/puppetdb/conf.d/database.conf
+++ b/puppetdb/conf.d/database.conf
@@ -3,5 +3,7 @@ database: {
   username: ${PUPPETDB_USER}
   password: ${PUPPETDB_PASSWORD}
   node-ttl: ${PUPPETDB_NODETTL}
+  report-ttl: ${PUPPETDB_REPORTTTL}
   maximum-pool-size: ${PUPPETDB_MAXPOOLSIZE}
+  connection-timeout: ${PUPPETDB_CONNTIMEOUT}
 }
